# KeenInsight

./: .gitignore  .gitmodules  GEMINI.md  README.md  analyzeException.py  diagnosis_results.json  generate_diagnosis.py  generate_html.py  generate_initial_html.py  generate_multi_tune.py  go.mod  go.sum  install_qed.sh  main.py  multi_tune_results.json  oneStepTune.py  pyproject.toml  requirements.txt  run_diagnosis.py  slow_query_list.json  sysinsight.py  sysinsight_test.py  template_renderer.py  tuning_results.json  view_html.py  web_server.py
.trellis/: workflow.md
DBTuner/: config_test.ini  dbenv.py
HisRule/: com10_update_rule_80.txt  com10_update_rule_80_2.txt  com10_update_rule_80_4.txt  com10_update_rule_80_6.txt  updatedMetric_rules_test.txt
OneStepTuning/: onestep.json
analysis_cache/: binlog_cache_size_er_thd_analysis.json  binlog_group_commit_sync_delay_analysis.json  buf_lru_get_free_block_innodb_buffer_pool_size_analysis.json  host_cache_size___errno_location_analysis.json  host_cache_size_delegate::is_empty_analysis.json  host_cache_size_my_free_analysis.json  host_cache_size_my_malloc_analysis.json  host_cache_size_resourcegroups::resource_group_mgr::instance_analysis.json  host_cache_size_strmake_analysis.json  innodb_autoextend_increment_analysis.json  innodb_buffer_pool_instances_buf::block_hint::buffer_fix_block_if_still_valid_analysis.json  innodb_buffer_pool_instances_buf_flush_do_batch_analysis.json  innodb_buffer_pool_instances_buf_read_ahead_random_analysis.json  innodb_buffer_pool_instances_buf_read_page_low_analysis.json  innodb_buffer_pool_instances_ibuf_insert_analysis.json  innodb_buffer_pool_size_buf_lru_get_free_block_analysis.json  innodb_buffer_pool_size_buf_lru_get_free_only_analysis.json  innodb_buffer_pool_size_buf_read_page_background_analysis.json  innodb_buffer_pool_size_mtr_t::commit_analysis.json  innodb_buffer_pool_size_mtr_t::start_analysis.json  innodb_flush_log_at_trx_commit_log_flusher_analysis.json  innodb_flush_log_at_trx_commit_std::chrono::_v2::system_clock::now_analysis.json  innodb_max_undo_log_size_analysis.json  (+49 more)
(+1286 files in other folders)
